--- a/About/index.html
+++ b/About/index.html
@@ -77,8 +77,12 @@
 <div class="blog">
   <h2>Make your own kind of music</h2>
   <h3>Even if nobody else sings along</h3>
-  
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultrices mauris metus. Phasellus quis ipsum eget leo ullamcorper convallis nec pellentesque lacus. Phasellus sed aliquam lorem. Nulla eleifend consequat elementum. Fusce felis nisl, imperdiet non velit non, placerat dapibus sapien. Praesent metus felis, cursus sit amet fringilla quis, porttitor nec metus. Aenean vitae fermentum augue. Etiam non arcu nec massa sollicitudin vehicula volutpat ut augue.</p>
+
+  <p>Young professiona. Twenty-something. Domer. All things that tell you something about me. I strive march to the beat of my own drum, ride the ups and downs of life, and choose to take the path less taken.</p>
+
+  <p>With the goal of learning something new, I took a web design class.  This is the result. You will now be privy to the inner-most workings of my mind.</p>
+
+  <p>Happy reading!</p>
 
 </div>
 
