--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </nav>
 
 <div class="imagecontainer">
-	<img src="Images/Dome.jpg"/>
+	<img src="Images/pigeons.jpg"/>
 	<span><h1>News Junkie</h1><h1>Marketing Guru</h1> <h1>Innovation Enthusiast</h1> </span>
 </div>
 
